<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64sp"
    android:layout_marginLeft="16sp"
    android:layout_marginRight="16sp"
    android:gravity="center_vertical"
    android:id="@+id/frameLayout">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/course_row_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:height="32sp"
            android:lineHeight="32sp"
            android:text="@tools:sample/full_names"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="32dp"
            tools:layout_conversion_absoluteWidth="130dp" />

        <Button
            android:id="@+id/remove_course_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/x"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/course_row_name"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/edit_course"
            android:layout_width="69dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/edit"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/remove_course_button" />

        <!-- a TextView to output List contents to retroactively test  List and database management -->
        <!-- COMMENT WHEN NOT IN USE -->
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>